[gd_scene load_steps=16 format=3 uid="uid://kdrawv15sk1x"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_810r0"]
[ext_resource type="Texture2D" uid="uid://brfcuin0ndrgo" path="res://assets/img/bg.png" id="1_k57l5"]
[ext_resource type="Texture2D" uid="uid://b3f8krskk7a8x" path="res://assets/img/bg-grid.png" id="3_xpg0i"]
[ext_resource type="PackedScene" uid="uid://dtgdekopmcjsm" path="res://scenes/tetromino_tip.tscn" id="4_0eupn"]
[ext_resource type="PackedScene" uid="uid://bix1xqpogpa0u" path="res://scenes/board.tscn" id="4_kenvd"]
[ext_resource type="Script" path="res://scripts/tetromino_tips.gd" id="4_m5kv2"]
[ext_resource type="AudioStream" uid="uid://b2x8c0cy8lqro" path="res://assets/audio/hold.mp3" id="13_q6ux6"]
[ext_resource type="Theme" uid="uid://gt7h6bbig5kt" path="res://resources/theme.tres" id="14_nhsiw"]
[ext_resource type="Script" path="res://scripts/loading.gd" id="15_bsuwa"]
[ext_resource type="Script" path="res://scripts/pop_game_over.gd" id="16_ggeei"]
[ext_resource type="Texture2D" uid="uid://y5d2j2fcr5w7" path="res://assets/img/icon-home-30.png" id="17_5x5gu"]
[ext_resource type="Texture2D" uid="uid://dvavqqvp1qbur" path="res://assets/img/icon-replay-30.png" id="18_m3255"]

[sub_resource type="Animation" id="Animation_vs654"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["3"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_q2fib"]
resource_name = "loading"
length = 3.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["3", "2", "1", "0"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2), Vector2(1, 1), Vector2(2, 2), Vector2(1, 1), Vector2(2, 2), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"handle_tree_start"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3bwbd"]
_data = {
"RESET": SubResource("Animation_vs654"),
"loading": SubResource("Animation_q2fib")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_810r0")
metadata/_edit_lock_ = true

[node name="Bg" type="Sprite2D" parent="."]
texture = ExtResource("1_k57l5")
offset = Vector2(400, 300)
metadata/_edit_lock_ = true

[node name="BgGrid" type="Sprite2D" parent="."]
position = Vector2(400, 300)
texture = ExtResource("3_xpg0i")
metadata/_edit_lock_ = true

[node name="Board" parent="." instance=ExtResource("4_kenvd")]

[node name="TetrominoNextTips" type="Node" parent="."]
script = ExtResource("4_m5kv2")

[node name="TetrominoTipNext1" parent="TetrominoNextTips" instance=ExtResource("4_0eupn")]
position = Vector2(658.649, 270.486)
metadata/_edit_lock_ = true

[node name="TetrominoTipNext2" parent="TetrominoNextTips" instance=ExtResource("4_0eupn")]
position = Vector2(658.649, 199.486)
metadata/_edit_lock_ = true

[node name="TetrominoTipNext3" parent="TetrominoNextTips" instance=ExtResource("4_0eupn")]
position = Vector2(658.649, 134.486)
metadata/_edit_lock_ = true

[node name="TetrominoHoldTip" parent="." instance=ExtResource("4_0eupn")]
visible = false
position = Vector2(144, 136)
metadata/_edit_lock_ = true

[node name="ui" type="Node" parent="."]

[node name="Score" type="Label" parent="ui"]
offset_left = 83.0
offset_top = 376.0
offset_right = 205.0
offset_bottom = 408.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Level" type="Label" parent="ui"]
offset_left = 82.0
offset_top = 438.0
offset_right = 206.0
offset_bottom = 467.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Lines" type="Label" parent="ui"]
offset_left = 83.0
offset_top = 498.0
offset_right = 205.0
offset_bottom = 528.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Hold" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_q6ux6")

[node name="Pause" type="Button" parent="."]
offset_left = 652.0
offset_top = 493.0
offset_right = 722.0
offset_bottom = 563.0
theme = ExtResource("14_nhsiw")
theme_type_variation = &"ButtonPause"

[node name="PopPause" type="PanelContainer" parent="."]
process_mode = 3
visible = false
z_index = 10
offset_left = 288.0
offset_top = 172.0
offset_right = 510.0
offset_bottom = 485.0
theme = ExtResource("14_nhsiw")
theme_type_variation = &"PanelMenu"

[node name="VBoxContainer" type="VBoxContainer" parent="PopPause"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PopPause/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="PopPause/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "PAUSE"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="PopPause/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"ButtonGreen"
text = "RESUME"

[node name="Options" type="Button" parent="PopPause/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="HowToPlay" type="Button" parent="PopPause/VBoxContainer"]
layout_mode = 2
text = "HOW TO PLAY"

[node name="Quit" type="Button" parent="PopPause/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="Loading" type="Node2D" parent="."]
process_mode = 3
visible = false
z_index = 10
script = ExtResource("15_bsuwa")

[node name="Label" type="Label" parent="Loading"]
offset_left = 310.0
offset_top = 187.0
offset_right = 510.0
offset_bottom = 387.0
pivot_offset = Vector2(100, 100)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Loading"]
libraries = {
"": SubResource("AnimationLibrary_3bwbd")
}

[node name="PopGameOver" type="PanelContainer" parent="."]
process_mode = 3
visible = false
z_index = 10
offset_left = 288.0
offset_top = 189.0
offset_right = 515.0
offset_bottom = 454.0
theme = ExtResource("14_nhsiw")
theme_type_variation = &"PanelMenu"
script = ExtResource("16_ggeei")

[node name="VBoxContainer" type="VBoxContainer" parent="PopGameOver"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PopGameOver/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="PopGameOver/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "GAME OVER"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PopGameOver/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PopGameOver/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PopGameOver/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="PopGameOver/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "HIGH SCORES"
horizontal_alignment = 1

[node name="FlowContainer" type="HBoxContainer" parent="PopGameOver/VBoxContainer"]
layout_mode = 2

[node name="Home" type="Button" parent="PopGameOver/VBoxContainer/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 6
icon = ExtResource("17_5x5gu")
icon_alignment = 1

[node name="Again" type="Button" parent="PopGameOver/VBoxContainer/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"ButtonGreen"
icon = ExtResource("18_m3255")
icon_alignment = 1

[node name="LevelUp" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ScoreUp" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="game_over" from="Board" to="." method="_on_board_game_over"]
[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="PopPause/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PopGameOver/VBoxContainer/FlowContainer/Home" to="." method="_on_home_pressed"]
[connection signal="timeout" from="LevelUp" to="." method="_on_level_up_timeout"]
[connection signal="timeout" from="ScoreUp" to="." method="_on_score_up_timeout"]
